tests/snapshots/serde__de_sparse_array_with_properties_ordered.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n\nconst c = { };\nconst b = { c };\nconst a = { b };\nconst arr = new Array(3);\narr[2] = b; \narr.x = 1;\narr.c = c;\nc.arr = arr;\narr.foo = \"bar\";\nc\n"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Object {
        OneByte("arr"): HeapReference(
            *1,
        ),
    },
    1: SparseArray(3) {
        2: HeapReference(
            *2,
        ),
        OneByte("x"): I32(
            1,
        ),
        OneByte("c"): HeapReference(
            *0,
        ),
        OneByte("foo"): String(
            OneByte("bar"),
        ),
    },
    2: Object {
        OneByte("c"): HeapReference(
            *0,
        ),
    },
}

