tests/snapshots/serde__de_typed_array_second_view_subarray.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nconst a = new Uint8Array([1, 2]); [a, a.subarray(1, 2)]"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: DenseArray [
        HeapReference(
            *2,
        ),
        HeapReference(
            *3,
        ),
    ] {},
    1: ArrayBuffer {
        data: [
            1,
            2,
        ],
        max_byte_length: None,
    },
    2: ArrayBufferView {
        kind: Uint8Array,
        buffer: *1,
        byte_offset: 0,
        length: 2,
        is_length_tracking: false,
        is_backed_by_rab: false,
    },
    3: ArrayBufferView {
        kind: Uint8Array,
        buffer: *1,
        byte_offset: 1,
        length: 1,
        is_length_tracking: false,
        is_backed_by_rab: false,
    },
}

