tests/snapshots/serde__display_bigint64array_resizable_non_tracking.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew BigInt64Array(new ArrayBuffer(16, { maxByteLength: 24 })).subarray(0, 1)"
---
const v0 = new ArrayBuffer(16, { maxByteLength: 24 });
new BigInt64Array(v0, 0, 1)
