tests/snapshots/serde__display_bigint64array_resizable_with_data.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nconst a = new BigInt64Array(new ArrayBuffer(16, { maxByteLength: 24 })); a.set([1n, -2n]); a"
---
const v0 = new ArrayBuffer(16, { maxByteLength: 24 });
new BigInt64Array(v0).set([
  0x01n, -0x02n,
]);
new BigInt64Array(v0)
